--- a/index.html
+++ b/index.html
@@ -5,13 +5,24 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Edu+NSW+ACT+Foundation:wght@400;700&display=swap">
   <link rel="stylesheet" href="style.css">
   <title>Etch-A-Sketch</title>
 </head>
 
 <body>
-  <button id="grid-dimensions">Grid Dimensions</button>
-  <div class="grid-container"></div>
+
+  <main>
+    <div class="settings">
+      <div id="size-value" class="size-value">16 x 16</div>
+      <input id="size-slider" type="range" value="16" min="1" max="64" />
+    </div>
+    <div class="grid-border">
+      <h1>Etch-A-Sketch</h1>
+      <div id="grid"></div>
+      <button id="btn-clear">Clear</button>
+    </div>
+  </main>
 
   <script src="script.js"></script>
 </body>
